IE11 z-index bugfix 記事詳細ページファーストビューアニメーション演出変更 テキスト一行あたりの文字数（max-width）を調整

--- a/src/css/_class.scss
+++ b/src/css/_class.scss
@@ -29,11 +29,19 @@ svg {
 // コンテナ
 // ========
 
-.container {
+.container,
+.container-text {
   width: calc(100% - 4rem);
-  max-width: 64rem;
   margin-right: auto;
   margin-left: auto;
+}
+
+.container {
+  max-width: 64rem;
+}
+
+.container-text {
+  max-width: 50rem;
 }
 
 // ======
