--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -223,6 +223,7 @@ a {
 img {
   max-width: 100%;
   height: auto;
+  vertical-align: top;
 }
 
 // =======================
@@ -710,7 +711,7 @@ body {
 
       .latest-1 {
         width: 100%;
-        margin-top: 4rem;
+        margin-top: 2rem;
         padding-bottom: 4rem;
         border-bottom: solid 1px $color--border;
 
@@ -946,7 +947,6 @@ body {
                             0 16px 16px rgba(0, 0, 0, .1),
                             8px 32px 32px rgba(0, 0, 0, .15),
                             8px 64px 64px rgba(0, 0, 0, .15);
-                vertical-align: bottom;
 
                 @media (max-width: 768px) { width: 50%;  }
                 @media (min-width: 769px) { width: 100%; }
@@ -1037,15 +1037,7 @@ body {
       .eyecatch {
         position: relative;
         padding: 2rem 0;
-        opacity: 0;
         text-align: center;
-        animation: article-detail-eyecatch .6s ease-out both;
-
-        @keyframes article-detail-eyecatch {
-          100% {
-            opacity: 1;
-          }
-        }
 
         // 周辺減光
         &::after {
@@ -1054,10 +1046,9 @@ body {
           position: absolute;
           top: 0;
           left: 0;
-          z-index: 2;
           width: 100%;
           height: 100%;
-          background: radial-gradient(circle, rgba(0, 0, 0, .4) 20%, rgba(0, 0, 0, .8));
+          background: radial-gradient(ellipse farthest-corner at 45px 45px ,rgba(0, 0, 0, .8) 0, rgba(51, 51, 51, .4) 60%, rgba(51, 51, 51, .4) 80%, rgba(0, 0, 0, 1) 100%);
         }
 
         // 背景
@@ -1065,27 +1056,20 @@ body {
           position: absolute;
           top: 0;
           left: 0;
-          z-index: 1;
           width: 100%;
           height: 100%;
           background-repeat: repeat;
-
-          @media (max-width: 960px) {
-            background-position: 50% 50%;
-            background-size: cover;
-          }
+          background-position: 100% 50%;
+          background-size: 20% auto;
 
           @media (min-width: 961px) {
-            background-position: 100% 50%;
-            background-size: 20% auto;
             animation: article-detail-eyecatch-background 60s linear infinite;
+          }
 
-            @keyframes article-detail-eyecatch-background {
-              100% {
-                background-position: 0 50%;
-              }
+          @keyframes article-detail-eyecatch-background {
+            100% {
+              background-position: 0 50%;
             }
-
           }
 
         }
@@ -1093,28 +1077,14 @@ body {
         // 画像
         .img {
           position: relative;
-          z-index: 3;
+          z-index: 1;
 
           @include container;
 
-          @media (min-width: 961px) {
-            opacity: 0;
-            transform: translateY(2rem);
-            animation: article-detail-eyecatch-img 1.2s .3s $easing both;
-
-            @keyframes article-detail-eyecatch-img {
-              100% {
-                opacity: 1;
-                transform: translateY(0);
-              }
-            }
-
-          }
-
           img {
+            background: $color--background;
             box-shadow: 0 16px 24px -8px rgba(0, 0, 0, .4);
             border-radius: 2px;
-            vertical-align: top;
           }
 
         }
@@ -1199,7 +1169,7 @@ body {
       .content {
         font-size: 1.4rem;
 
-        @include container;
+        @include container-text;
 
         h1,
         h2,
@@ -1310,7 +1280,7 @@ body {
           max-height: 36rem;
           padding: 1rem;
           border: solid 2px $color--border;
-          line-height: 1.4;
+          line-height: 1.2;
 
           &::before {
             content: attr(title);
@@ -1374,7 +1344,7 @@ body {
 
       // 隣接リンク
       .adjacent-links {
-        margin-top: 4rem;
+        margin-top: 2rem;
 
         @include container;
 
@@ -1775,7 +1745,7 @@ body {
   top: 0;
   bottom: 0;
   left: 0;
-  z-index: 2;
+  z-index: 3;
   width: 100vw;
   max-width: 480px;
   padding-top: 5rem;
@@ -2035,7 +2005,7 @@ body {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 3;
+  z-index: 2;
   width: 100%;
   height: 100%;
   opacity: 0;
@@ -2308,7 +2278,7 @@ body {
 
     // filterあるいはbackdrop-filterをサポート
     @supports (filter: blur(0)) or (-webkit-backdrop-filter: blur(0)) {
-      background: rgba(0, 0, 0, .2);
+      background: rgba(0, 0, 0, .4);
     }
 
   }
@@ -2319,7 +2289,7 @@ body {
 
     // filterあるいはbackdrop-filterをサポート
     @supports (filter: blur(0)) or (-webkit-backdrop-filter: blur(0)) {
-      background: rgba(255, 255, 255, .2);
+      background: rgba(255, 255, 255, .4);
     }
 
   }
